--- a/src/Components/pages/BuilderElement/systemClasses.css
+++ b/src/Components/pages/BuilderElement/systemClasses.css
@@ -92,6 +92,7 @@
     box-shadow: none;
     white-space: nowrap;
     overflow: hidden;
+    visibility: hidden;
 }
 .systemclass_menu-horizontal > .systemclass_menu-item,
 .systemclass_menu-horizontal
